version 0.9.9.85
- time stamps in chat window
- fixed: Messages may now contain newline characters
- file transfer

versions up to 0.9.9.64
- basic messaging functionality
- first really stable version