@@ -1,3 +1,6 @@
+next release
+- notification popups and flashing symbols in taskbar
+
 version 0.9.9.85
 - time stamps in chat window
 - fixed: Messages may now contain newline characters
